# rmp

./: .gitignore  CLAUDE.md  README.md
docs/: android-build.md  architecture.md  ci-pipelines.md  e2e-video.md  ios-build.md  nix-environment.md  uniffi-patterns.md
invariants/: invariants.toml
scripts/: agent-brief  android-build  ios-build
templates/: .gitignore  Cargo.toml  flake.nix  justfile  rust-toolchain.toml
templates/.github/workflows/: android.yml  e2e-video-android.yml  e2e-video-ios.yml  ios.yml  rust.yml
templates/android/: settings.gradle.kts
templates/android/app/: build.gradle.kts
templates/android/app/src/main/: AndroidManifest.xml
templates/android/app/src/main/java/dev/damsac/app/: MainActivity.kt
templates/android/gradle/: libs.versions.toml
templates/crates/blossom-upload/: Cargo.toml
templates/crates/blossom-upload/src/: main.rs
templates/crates/core/: Cargo.toml
templates/crates/core/src/: error.rs  lib.rs  models.rs  store.rs
templates/crates/ffi/: Cargo.toml  uniffi.toml
templates/crates/ffi/src/: lib.rs
templates/crates/uniffi-bindgen/: Cargo.toml
templates/ios/: Info.plist  project.yml
templates/ios/Sources/: App.swift
templates/ios/Tests/: {{ProjectPascal}}Tests.swift
templates/ios/UITests/: {{ProjectPascal}}UITests.swift
