[package]
name = "blossom-upload"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "blossom-upload"
path = "src/main.rs"

[dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
hex = "0.4"
nostr-sdk = "0.39"
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
