[package]
name = "{{project}}-ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
name = "{{project_underscore}}_ffi"

[dependencies]
{{project}}-core = { path = "../core" }
uniffi = "0.31"
thiserror = "2"

[build-dependencies]
uniffi = { version = "0.31", features = ["build"] }
